refactor: implement modular architecture and performance improvements
Major architectural improvements and code organization:
- Split monolithic code into modular services (config, utils, api, ui)
- Implement ES modules for better code organization
- Add centralized configuration management
- Create reusable utility functions

Performance & Security enhancements:
- Add caching mechanism for API responses
- Implement batch processing for posts
- Add retry mechanism with exponential backoff
- Improve input validation and sanitization
- Add proper error handling and logging

UX improvements:
- Add tooltips for cringe detection reasons
- Enhance error feedback and loading states
- Improve settings page functionality
- Add better stats tracking

Build system updates:
- Update manifest.json for ES modules support
- Add proper CSP headers
- Improve module loading system

Version bump: 0.0.2 -> 0.0.3

--- a/pages/popup.html
+++ b/pages/popup.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -158,56 +157,6 @@
             display: block;
         }
 
-        .filtered-content {
-            background: #f8fafc;
-            border-radius: 6px;
-            padding: 12px;
-            margin-top: 12px;
-            font-size: 13px;
-            color: #64748b;
-        }
-
-        .content-title {
-            font-weight: 500;
-            color: #0077b5;
-            margin-bottom: 8px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .post-item {
-            padding: 8px 0;
-            border-bottom: 1px solid #eee;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .post-item:last-child {
-            border-bottom: none;
-            padding-bottom: 0;
-        }
-
-        .shield-icon {
-            color: #0077b5;
-            opacity: 0.8;
-        }
-
-        .refresh-button {
-            background: none;
-            border: none;
-            color: #0077b5;
-            cursor: pointer;
-            padding: 4px;
-            border-radius: 4px;
-            transition: background 0.2s;
-        }
-
-        .refresh-button:hover {
-            background: #e1f0f7;
-        }
-
         .error-card {
             background: #fee2e2;
             border: 1px solid #ef4444;
@@ -226,7 +175,6 @@
         }
     </style>
 </head>
-
 <body>
     <div class="container">
         <div class="header">
@@ -274,7 +222,6 @@
         </div>
     </div>
 
-    <script src="./../scripts/popup.js"></script>
+    <script type="module" src="./../scripts/popup.js"></script>
 </body>
-
 </html>
