Added API Delete key in setting page

--- a/pages/settings.html
+++ b/pages/settings.html
@@ -217,6 +217,7 @@
                 <div class="input-group">
                     <input type="text" id="api-key" placeholder="Your Groq API Key">
                     <button id="save-button">Save</button>
+                    <button id="clear-button">Delete Key (Local)</button>
                 </div>
             </div>
         </div>
